# PythonSimpleSettings

./: README.md  error.py  pyproject.toml  settings.py  setup.py
.github/workflows/: release.yml
settings/: __init__.py
settings/tests/: test_settings.py
