[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "settings"
version = "2.0.0"
description = "A simple wrapper for configparser"
authors = [{ name = "Panda", email = "panda@delmasweb.net" }]
dependencies = ["theophanie_models"]
requires-python = ">=3.11"
keywords = ["settings"]
urls = { Homepage = "https://github.com/Pier4413/PythonSimpleSettings" }

[tool.setuptools.packages.find]
where = ["."]
